--- a/themes/hello-friend-ng/assets/scss/_homepage.scss
+++ b/themes/hello-friend-ng/assets/scss/_homepage.scss
@@ -5,13 +5,13 @@ main.homepage {
     .summary {
         padding-top: 10px;
         padding-bottom: 5px;
-        font-size: small;
+
         line-height: 1.5em;
     }
     .meta {
         padding-top: 0px;
         padding-bottom: 20px;
-        font-size: x-small;
+        font-size: small;
         line-height: 1.5em;
     }
 
