--- a/themes/hello-friend-ng/assets/scss/_list.scss
+++ b/themes/hello-friend-ng/assets/scss/_list.scss
@@ -72,7 +72,6 @@ li.post-item.type-albums, li.post-item.type-posts {
       padding-top: 6px;
       margin-right: 1.8em;
       font-size: 1.6em;
-      @include dimmed;
 
       @media #{$media-size-tablet} {
         margin: -6px 0 4px;
@@ -94,7 +93,6 @@ li.post-item.type-albums, li.post-item.type-posts {
     &-day {
       flex-shrink: 0;
       margin-left: 1em;
-      @include dimmed;
     }
   }
 }
