--- a/themes/hello-friend-ng/assets/scss/_main.scss
+++ b/themes/hello-friend-ng/assets/scss/_main.scss
@@ -143,6 +143,7 @@ code {
   font-family: Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;
   font-feature-settings: normal;
   background: $light-background-secondary;
+  color: #676767;
   padding: 1px 6px;
   margin: 0 2px;
   border-radius: 5px;
@@ -150,6 +151,7 @@ code {
 
   @media(prefers-color-scheme: dark) {
     background: $dark-background-secondary;
+    color: #aaaaaa;
   }
 }
 
@@ -244,7 +246,7 @@ ol ol {
 
   @media #{$media-size-phone} {
     margin-top: 0;
-    padding:10px;
+    padding:20px;
   }
 }
 
