--- a/themes/hello-friend-ng/assets/scss/_style.scss
+++ b/themes/hello-friend-ng/assets/scss/_style.scss
@@ -31,12 +31,17 @@ td, th {
 
 .admonition-content {
 	display: block;
+	color: #6d6d6d;
 	margin: 0;
 	padding: .125em 1em;
 	margin-top: 2em;
 	margin-bottom: 2em;
 	overflow-x: auto;
 	background-color: rgba(0,0,0,.05);
+	@media(prefers-color-scheme: dark) {
+		color: #959595;
+	  }
+
 }
 
 .post-content img {
