--- a/themes/hello-friend-ng/assets/scss/_variables.scss
+++ b/themes/hello-friend-ng/assets/scss/_variables.scss
@@ -3,15 +3,15 @@
 /* light theme color */
 $light-background: #fff;
 $light-background-secondary: #eaeaea;
-$light-color: #222;
-$light-color-secondary: #999;
+$light-color: #737373;
+$light-color-secondary: #747474;
 $light-border-color: #dcdcdc;
 
 /* dark theme colors */
 $dark-background: #292a2d;
 $dark-background-secondary: #3b3d42;
 $dark-color: #ddd;
-$dark-color-secondary: #73747b;
+$dark-color-secondary: #90919b;
 $dark-border-color: #4a4b50;
 
 $media-size-smallest: "(max-width: 400px)";
