--- a/themes/hello-friend-ng/assets/scss/galleries/_styles.scss
+++ b/themes/hello-friend-ng/assets/scss/galleries/_styles.scss
@@ -231,7 +231,6 @@ section.featured .card {
       border-radius: 0.5rem;
       color: #fff;
       font-size: .75rem;
-      color: var(--text-2);
       font-size: .875rem;
       line-height: .575rem;
     }
